@@ -11,19 +11,6 @@ using namespace pqxx;
 
 namespace
 {
-#ifndef PQXX_HAVE_DISTANCE
-template<typename ITERATOR> size_t distance(ITERATOR begin, ITERATOR end)
-{
-  size_t d = 0;
-  while (begin != end)
-  {
-    ++begin;
-    ++d;
-  }
-  return d;
-}
-#endif // PQXX_HAVE_DISTANCE
-
 void compare_results(string name, result lhs, result rhs)
 {
   if (lhs != rhs)
@@ -62,7 +49,7 @@ template<typename ITER> string subst(transaction_base &t,
 	ITER patbegin,
 	ITER patend)
 {
-  int i = distance(patbegin, patend);
+  int i = pqxx::internal::distance(patbegin, patend);
   for (ITER arg = patend; i > 0; --i)
   {
    --arg;
